[gd_scene load_steps=16 format=3 uid="uid://c3gf711eygx88"]

[ext_resource type="PackedScene" uid="uid://wnivt85d685b" path="res://objects/player.tscn" id="1_3ofs5"]
[ext_resource type="Script" path="res://scripts/view.gd" id="2_cae4d"]
[ext_resource type="PackedScene" uid="uid://dn4oth1ukmmm0" path="res://objects/large_robot.tscn" id="2_wfox2"]
[ext_resource type="PackedScene" uid="uid://bj1p1gqdgy1ay" path="res://objects/roof.tscn" id="2_yu08u"]
[ext_resource type="PackedScene" uid="uid://doha0ayin2nnn" path="res://objects/small_robot.tscn" id="3_tbp4d"]
[ext_resource type="PackedScene" uid="uid://b7bwpf6gc8rov" path="res://objects/Dumpsters.tscn" id="3_vxiga"]
[ext_resource type="PackedScene" uid="uid://cngbkcy15feee" path="res://objects/crate (2).tscn" id="4_3684u"]
[ext_resource type="Script" path="res://scripts/hitbox_large.gd" id="4_htg0e"]
[ext_resource type="Script" path="res://scripts/hitbox.gd" id="5_pnvxj"]
[ext_resource type="PackedScene" uid="uid://62nli1x8on57" path="res://objects/donut.tscn" id="7_61nce"]
[ext_resource type="PackedScene" uid="uid://g0pma8nweaq3" path="res://objects/trash_bag.tscn" id="8_1wp17"]
[ext_resource type="PackedScene" uid="uid://77drdlegobp7" path="res://objects/coin.tscn" id="9_3733b"]

[sub_resource type="Environment" id="Environment_djdn4"]
background_mode = 1
background_color = Color(0.0125363, 0.0203418, 0.0726628, 1)
ambient_light_source = 2
ambient_light_color = Color(0.296054, 0.546975, 0.679961, 1)
glow_enabled = true
glow_normalized = true
glow_intensity = 0.75
glow_strength = 1.25
glow_bloom = 0.1
glow_blend_mode = 0
adjustment_enabled = true
adjustment_saturation = 1.25

[sub_resource type="BoxShape3D" id="BoxShape3D_rpo0r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_80nkn"]

[node name="Main" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.974425, 0.224713, 0, -0.224713, 0.974425, 0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_djdn4")

[node name="Player" parent="." node_paths=PackedStringArray("view") instance=ExtResource("1_3ofs5")]
transform = Transform3D(-0.999829, -0.002485, -0.01832, -0.00694416, 0.968846, 0.247562, 0.017134, 0.247648, -0.968697, -1.9155, -5.81862, 25.3513)
view = NodePath("../View")

[node name="View" type="Node3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("2_cae4d")
target = NodePath("../Player")

[node name="Camera3D" type="Camera3D" parent="View"]
transform = Transform3D(1, 1.86019e-08, -1.39075e-07, -1.86019e-08, 1, 2.23517e-07, 1.39075e-07, -2.23517e-07, 1, -2, -2.08573, 35.9782)

[node name="LargeRobot" parent="." instance=ExtResource("2_wfox2")]
transform = Transform3D(8, 0, 0, 0, 8, 1.19209e-07, 0, -1.19209e-07, 8, 0, 4.05315, -15.3883)

[node name="HitboxLarge" type="Area3D" parent="LargeRobot"]
script = ExtResource("4_htg0e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LargeRobot/HitboxLarge"]
transform = Transform3D(1.75, 0, 0, 0, 1, 0, 0, 0, 1.25, 0, 0.5, 0.0530145)
shape = SubResource("BoxShape3D_rpo0r")

[node name="Timer" type="Timer" parent="LargeRobot/HitboxLarge"]

[node name="SmallRobot" parent="." instance=ExtResource("3_tbp4d")]
transform = Transform3D(3, 0, 0, 0, 2.92311, -0.674853, 0, 0.674853, 2.92311, 8, -0.27733, 2.095)

[node name="Hitbox" type="Area3D" parent="SmallRobot"]
transform = Transform3D(1.75, 0, 0, 0, 1, 0, 0, 0, 1.25, 0, 0, 0)
script = ExtResource("5_pnvxj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SmallRobot/Hitbox"]
transform = Transform3D(1.75, 0, 0, 0, 1, 0, 0, 0, 1.25, 0, 0, 0)
shape = SubResource("BoxShape3D_80nkn")

[node name="Timer" type="Timer" parent="SmallRobot/Hitbox"]

[node name="World" type="Node3D" parent="."]

[node name="Road" parent="World" instance=ExtResource("2_yu08u")]
transform = Transform3D(21.8034, 0, 0, 0, 1.39168, -7.60543, 0, 0.331033, 31.9738, 0, 0, 0)

[node name="Dumpster" parent="World" instance=ExtResource("3_vxiga")]
transform = Transform3D(0.134741, 0.0654418, -4.21319, -1.51702, 2.89499, 0.0727113, 6.75025, 0.649301, 0.100441, 17.4108, 2.88025, -9.96941)

[node name="Dumpster2" parent="World" instance=ExtResource("3_vxiga")]
transform = Transform3D(0.0881964, -0.0659827, 4.21363, 1.5925, 2.88744, 0.0788465, -6.7336, 0.682018, 0.0738367, -18.4905, -1.05491, 6.74164)

[node name="Crate3" parent="World" instance=ExtResource("4_3684u")]
transform = Transform3D(19.678, 0.0940859, -3.57325, -0.906619, 19.4707, -4.4801, 3.4576, 4.56994, 19.1614, -5.49036, 1.19565, -3.99926)

[node name="Crate2" parent="World" instance=ExtResource("4_3684u")]
transform = Transform3D(29.9996, 0.159696, -0.000476628, -0.155613, 29.2121, -6.82861, -0.035886, 6.82852, 29.2125, -0.956465, 0.259578, 0.0598615)

[node name="Crate" parent="World" instance=ExtResource("4_3684u")]
transform = Transform3D(19.9997, 0.106464, -0.000317813, -0.103742, 19.4747, -4.55241, -0.023924, 4.55235, 19.475, -7, 0.259578, 0.0598615)

[node name="Donut" parent="World" instance=ExtResource("7_61nce")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 9.31323e-09, 0, -9.31323e-09, 0.1, -18.4904, 6.01374, 13.0738)

[node name="TrashBag" parent="World" instance=ExtResource("8_1wp17")]
transform = Transform3D(8.97751, 0.0312894, -4.40492, -0.989868, 9.75833, -1.9481, 4.29237, 2.18494, 8.76365, -10.8949, -0.724693, 4.11202)

[node name="Coin" parent="World" instance=ExtResource("9_3733b")]
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, -2.07833, 15.7514)

[node name="Coin3" parent="World" instance=ExtResource("9_3733b")]
transform = Transform3D(1, 0, 0, 0, 0.999999, 1.93715e-07, 0, -1.93715e-07, 0.999999, -0.751675, 6.65461, 1.63618)

[node name="Coin2" parent="World" instance=ExtResource("9_3733b")]
transform = Transform3D(1, 0, 0, 0, 0.999999, 2.38419e-07, 0, -2.38419e-07, 0.999999, 7.13035, 3.29633, -8.77467)

[node name="TrashBag2" parent="World" instance=ExtResource("8_1wp17")]
transform = Transform3D(-5.21322, 0.0606101, -8.53338, -1.91761, 9.73568, 1.24066, 8.31535, 2.28315, -5.0638, 15.8737, -0.637682, 3.73471)

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.0865124, 0.996251, 0, -0.996251, -0.0865124, -0.487373, 33.6679, -42.7738)
light_color = Color(0.603922, 0, 0.913725, 1)
light_energy = 0.5
light_bake_mode = 1
shadow_enabled = true
shadow_opacity = 0.75
shadow_blur = 10.0
sky_mode = 1

[node name="OmniLight3D3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.181659, 9.5816, -16.855)
light_color = Color(0.843137, 0, 0, 1)
light_energy = 25.0
omni_range = 25.0

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.9107, 0.802191, 4.6697)
light_color = Color(0.186206, 0.615223, 0, 1)
light_energy = 25.0
omni_range = 25.0

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.4822, 0.309952, 2.73007)
light_color = Color(0.186206, 0.615223, 0, 1)
light_energy = 25.0
omni_range = 25.0

[connection signal="coin_collected" from="Player" to="Player" method="_on_coin_collected"]
[connection signal="donut_collected" from="Player" to="Player" method="_on_donut_collected"]
[connection signal="body_entered" from="LargeRobot/HitboxLarge" to="Player" method="_on_hitbox_large_body_entered"]
[connection signal="body_entered" from="LargeRobot/HitboxLarge" to="LargeRobot/HitboxLarge" method="_on_body_entered"]
[connection signal="body_exited" from="LargeRobot/HitboxLarge" to="Player" method="_on_hitbox_large_body_exited"]
[connection signal="body_exited" from="LargeRobot/HitboxLarge" to="LargeRobot/HitboxLarge" method="_on_body_exited"]
[connection signal="timeout" from="LargeRobot/HitboxLarge/Timer" to="LargeRobot/HitboxLarge" method="_on_timer_timeout"]
[connection signal="body_entered" from="SmallRobot/Hitbox" to="Player" method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="SmallRobot/Hitbox" to="SmallRobot/Hitbox" method="_on_body_entered"]
[connection signal="body_exited" from="SmallRobot/Hitbox" to="Player" method="_on_hitbox_body_exited"]
[connection signal="body_exited" from="SmallRobot/Hitbox" to="SmallRobot/Hitbox" method="_on_body_exited"]
[connection signal="timeout" from="SmallRobot/Hitbox/Timer" to="SmallRobot/Hitbox" method="_on_timer_timeout"]
[connection signal="body_entered" from="World/Donut" to="Player" method="_on_donut_body_entered"]
[connection signal="body_entered" from="World/Coin" to="Player" method="_on_coin_body_entered"]
